--- a/index.css
+++ b/index.css
@@ -11,3 +11,14 @@ body{
 h1{
   text-align: center;
 }
+h2{
+  color: aqua;
+}
+
+.juliet{
+  color: chartreuse;
+}
+
+#pelz{
+  color: blueviolet;
+}
